Validated LMP date on toggle of input on the question of whether client has menses

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -176,6 +176,7 @@ Green Card follow-up visit form
                 jq('#pregnancyOptionValues').hide();
                 jq('#fp-details').hide();
                 jq("#wants-pregnancy").hide();
+                jq('#lmp-date :input').val('');
                 clearHiddenSections(ifPatientPregnant);
                 clearHiddenSections(pregIntention);
             }
@@ -184,6 +185,7 @@ Green Card follow-up visit form
                 jq('#pregnancyOptionValues').hide();
                 jq('#fp-details').hide();
                 jq("#wants-pregnancy").hide();
+                jq('#lmp-date :input').val('');
                 clearHiddenSections(ifPatientPregnant);
                 clearHiddenSections(pregIntention);
             }
